Fixed side scrolling styling issue on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -62,7 +62,7 @@ span {
 }
 
 .basics {
-  padding: 20px;
+  padding: 20px 0px;
   width: 200px;
 }
 
@@ -162,7 +162,7 @@ height: 100%;
 
 
 .header h1 {
-  font-size: 32px;
+  font-size: 28px;
 }
 
 .wrapper {
