--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -9,7 +9,7 @@
   }
 
 .header h1 {
-  font-size: 32px;
+  font-size: 28px;
 }
 
 img {
